# tirvi

./: .gitignore  CLAUDE.md  dispute-item.md  pyproject.toml  ruff.toml
.claude/: settings.json  settings.local.json
.claude/agents/: README.md  debugger.md  docs-researcher.md  explorer.md  research-architect.md  research-cost.md  research-critic.md  research-explorer.md  research-precedent.md  reviewer.md  story-domain.md  story-product.md  story-technical.md  tdd-code-writer.md  tdd-flutter-code-writer.md  tdd-flutter-refactorer.md  tdd-flutter-test-writer.md  tdd-go-code-writer.md  tdd-go-refactorer.md  tdd-go-test-writer.md  tdd-refactorer.md  tdd-test-writer.md
.claude/hooks/: auto-ruff-format.sh  block-dangerous-commands.sh  check-complexity.sh  check-workitems-length.sh  (+3 more)
.workitems/: MIGRATION-LOG.md  PLAN-POC.md  PLAN.md  POC-CRITICAL-PATH.md  README.md  autonomous-design-preflight.sh  autonomous-design-run.md  coverage-plan.md  source-inventory.md
data/: acronym-lexicon.yaml  homograph-lexicon.yaml
docs/: HLD.md  PRD.md
ontology/: README.md  dependencies.yaml  technical-implementation.yaml  testing.yaml
player/: README.md  index.html  package.json  player.css  vitest.config.js
scripts/: README.md  acm-ingest.sh  cascade_demo.py  discover_homograph_cases.py  homograph_judges_bench.py  homograph_judges_bench_v2.py  load-ontology.py  migrate-feature.sh  run_demo.py  uat_e2e.js  validate-ontology.sh
tirvi/: __init__.py  contracts.py  errors.py  fakes.py  pipeline.py  ports.py  progress.py  results.py  voice_router.py  word_timing_provider.py
(+1180 files in other folders)
