[project]
name = "tirvi"
version = "0.0.0"
description = "Hebrew exam PDF → audio reading accommodation"
requires-python = ">=3.11"
readme = "README.md"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tirvi*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["tirvi"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
